[package]
name = "tutorial-generator"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Lindestad <dl@example.com>", "Eon <assistant@openclaw.ai>"]
description = "Automated tutorial generator that creates step-by-step walkthroughs from code repositories"
repository = "https://github.com/EonHermes/tutorial-generator"
license = "MIT"
readme = "README.md"
keywords = ["tutorial", "documentation", "git", "rust", "react"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.10"
walkdir = "2.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
